# lia

./: .gitignore  LICENSE  README.md
.github/workflows/: test.yml
desktop/: package.json  tailwind.config.js
desktop/src/: index.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: commands.rs  main.rs
desktop/src/components/: AddCommand.jsx  CommandList.jsx  CommandRunner.jsx  FolderSelector.jsx  LogTerminal.jsx
lia/: .env  configs.json
lia-src/: .env  Cargo.toml  configs.json  docker-compose.yml  install.sh  makefile
lia-src/back-end/core/: Cargo.toml
lia-src/back-end/core/src/: api.rs  cmd_engine.rs  db.rs  errors.rs  lib.rs
lia-src/back-end/core/src/models/: command.rs
lia-src/back-end/migrations/: 1_create_commands_table.up.sql  2_fts_search.up.sql
lia-src/docs/: usage.md
lia-src/front-end/cli/: Cargo.toml
lia-src/front-end/cli/src/: main.rs
lia-src/front-end/desktop/: Cargo.toml  package.json
lia-src/front-end/desktop/public/: index.html
lia-src/front-end/desktop/src/: App.jsx  app.rs
lia-src/front-end/desktop/src-tauri/: Cargo.toml  tauri.conf.json
lia-src/front-end/desktop/src-tauri/src/: main.rs
lia-src/front-end/desktop/src/components/: AddCommand.jsx  CommandList.jsx  CommandRunner.jsx  FolderSelector.jsx
lia-src/logs/: Test_log.txt
lia-src/macros/benchmark_macro/: Cargo.toml
lia-src/macros/benchmark_macro/src/: lib.rs
lia-src/system/: Cargo.toml
lia-src/system/src/: benchmark.rs  config.rs  defer.rs  lib.rs  path.rs
lia-src/system/src/env/: config.rs  mod.rs
lia-src/system/src/logger/: debug.rs  mod.rs
lia/back-end/core/: Cargo.toml
lia/front-end/cli/: Cargo.toml
lia/system/src/: lib.rs  path.rs
lia/system/src/env/: config.rs
lia/system/src/logger/: debug.rs
