[package]
name = "system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = { version = "0.15.0", features = ["cli"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
chrono = "0.4.37"
lazy_static = "1.4"
benchmark_macro = { version = "0.1.0", path = "../macros/benchmark_macro" }