[package]
name = "lia-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.8.2",features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid", "chrono"] } 
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0"
system = { path = "../../system" }
benchmark_macro = { version = "0.1.0", path = "../../macros/benchmark_macro" }