[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
lia-core = { path = "../../back-end/core" }
dotenv = "0.15"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.2",features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid", "chrono"] } 
crossterm = "0.28.1"
textwrap = "0.16.1"
system = { path = "../../system" }
benchmark_macro = { version = "0.1.0", path = "../../macros/benchmark_macro" }